--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   </div>
   <div class="Question-Container">
     <p class="Question-text">
-      Will You be my forever waala Chuzu?
+      Will you go out with me?
     </p>
   </div>
   <div class="yes-container">
