--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>CHUZU</title>
-  <link rel="shortcut icon" type="image/x-icon" href="/pics/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/pics/favicon-16x16.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Honk&family=Protest+Riot&display=swap" rel="stylesheet">
