--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   </div>
   <div class="Question-Container">
     <p class="Question-text">
-      Will you go out with me?
+      Will you be my forever wala Chuzu?
     </p>
   </div>
   <div class="yes-container">
